BUG: module_v4skin | loading dialog -> the dialog used a wrong z-index for the animation. fixes #6.

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -1414,7 +1414,6 @@ footer {
 .loadingContainerBackground {
     position: absolute;
     left: 50%;
-    z-index: -1;
 }
 
 /* DIALOGS / MODALS / BACKDROPS */
@@ -1437,7 +1436,7 @@ footer {
 
         .modal-body {
             max-height: none;
-            min-height: 50px;
+            min-height: 75px;
         }
 
         .modal-footer {
@@ -1456,12 +1455,6 @@ footer {
 #systemtaskStatusDiv {
     overflow-y: auto;
     max-height: 400px;
-}
-
-#folderviewDialog_loading {
-//    position: absolute;
-//    left: 50%;
-//    z-index: 0;
 }
 
 
